<package format="3">
  <name>rqt_service_caller</name>
  <version>0.4.10</version>
  <description>rqt_service_caller provides a GUI plugin for calling arbitrary services.</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_service_caller</url>
  <url type="repository">https://github.com/ros-visualization/rqt_service_caller</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_service_caller/issues</url>

  <author>Dirk Thomas</author>
  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
